--- a/style.css
+++ b/style.css
@@ -1,9 +1,14 @@
-@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:ital,wght@0,100..800;1,100..800&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=JetBrains+Mono:wght@100;400;600;800&display=swap');
 
 :root {
     --fonte-principal: "JetBrains Mono", monospace;
     --bg-base: rgb(6, 78, 54);
     --color-font: whitesmoke;
+    --input-bg: #002b1b;
+    --input-border: #007b45;
+    --button-bg: #00491c;
+    --button-hover-bg: #007b45;
+    --button-color: whitesmoke;
 }
 
 * {
@@ -11,80 +16,198 @@
     margin: 0;
 }
 
+html, body {
+    height: 122vh;
+}
+
+.logo{
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 15px;
+    padding-right: 2%;
+}
+
+.logo_cabecalho{
+    width: 5%;
+    filter: invert();
+    padding-bottom: 1%;
+}
+
+body {
+    background-color: var(--bg-base);
+    color: var(--color-font);
+    font-family: var(--fonte-principal);
+    font-size: 1.2rem;
+    line-height: 1.5;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
 .cabecalho {
     display: flex;
     flex-direction: column;
-    padding-top: 2%;
-    padding-left: 10%;
+    align-items: center;
+    padding: 0.5% 0;
+    background-color: var(--bg-base);
+}
+
+.titulo-header {
+    font-size: 3.5rem;
+    font-weight: 800;
+    margin-bottom: 0.5rem;
+}
+
+.subtitulo-header {
+    font-size: 1.5rem;
+    font-weight: 400;
 }
 
 .tutorial {
-    font-family: var(--fonte-principal);
     font-weight: 600;
     font-size: 1.5rem;
     color: var(--color-font);
     display: flex;
     flex-direction: column;
-    padding-left: 10%;
-    padding-top: 1%;
+    padding: 1% 10%;
     border-radius: 1.25rem;
+    align-items: center;
+    background-color: var(--input-bg); 
+    box-shadow: 0 6px 0px rgba(0, 0, 0, 0.1);
+    max-width: 700px; 
+    margin: 20px auto; 
 }
+
 
 .decodificador {
     display: flex;
     flex-direction: column;
-    padding-left: 10%;
-    padding-top: 3%;
-    color: var(--color-font);
-    font-family: var(--fonte-principal);
+    padding: 1% 10%;
     font-size: 1.5rem;
+    align-items: center;
+    flex-grow: 1;
 }
 
 .selecionador {
     display: flex;
     flex-direction: column;
-    padding-right: 80%;
+    margin-bottom: 2rem;
+    padding-bottom: 1%;
+    align-items: center;
 }
 
 .dropdown {
-    background-color: #00491c;
-    border: 2px solid whitesmoke;
+    background-color: var(--button-bg);
+    border: 2px solid var(--color-font);
     border-radius: 1rem;
-    padding: 10px 15px;
+    padding: 1rem;
     font-size: 16px;
-    color: whitesmoke;
+    color: var(--color-font);
     cursor: pointer;
     outline: none;
     transition: border-color 0.3s ease;
     font-family: var(--fonte-principal);
     font-weight: 700;
+    width: 150%;
+    height: 180%;
+    justify-content: center;
+    box-shadow: 0 6px 0px rgba(0, 0, 0, 0.1);
 }
 
 .dropdown:hover {
-    border-color: #000000;
-}
-
-.dropdown:focus {
-    border-color: #000000;
+    background-color: var(--button-hover-bg);
 }
 
 .dropdown option {
-    background-color: #00491c;
-    color: whitesmoke;
+    background-color: var(--button-bg);
+    color: var (--color-font);
 }
 
-.messagem-form{
-   display: flex;
-   justify-content: space-between;
+.mensagem-form {
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+    margin-bottom: 2rem;
+    width: 100%;
+    align-items: center;
 }
 
-#msgInput{
-    width: 40%;
-    height: 200%;
+#msgInput {
+    width: 100%;
+    padding: 10px;
+    border: 2px solid var(--input-border);
+    border-radius: 1rem;
+    background-color: var(--input-bg);
+    color: var(--color-font);
+    font-family: var(--fonte-principal);
+    font-size: 1rem;
+    outline: none;
+    transition: border-color 0.3s ease;
+    box-shadow: 0 6px 0px rgba(0, 0, 0, 0.1);
 }
 
-body {
-    background-color: var(--bg-base);
+#msgInput:focus {
+    border-color: var(--color-font);
+}
+
+#charCounter {
+    font-size: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.buttons {
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 1rem;
+    padding: 1% 0;
+    width: 100%;
+}
+
+button {
+    padding: 1rem;
+    border: none;
+    border-radius: 1.5rem;
+    border-style: solid;
+    border-color: whitesmoke;
+    background-color: var(--button-bg);
+    color: var(--button-color);
+    font-family: var(--fonte-principal);
+    font-size: 1rem;
+    cursor: pointer;
+    transition: background-color 0.3s ease;
+    width: 30%;
+    font-weight: 600;
+    box-shadow: 0 6px 0px rgba(0, 0, 0, 0.1)
+}
+
+button:hover {
+    background-color: var(--button-hover-bg);
+    scale: 103%;
+}
+
+.mensagem-codefy {
+    display: flex;
+    flex-direction: column;
+    gap: 1rem;
+    width: 100%;
+    align-items: center;
+}
+
+#mensagemCodificada {
+    width: 100%;
+    padding: 10px;
+    border: 2px solid var(--input-border);
+    border-radius: 1rem;
+    background-color: var(--input-bg);
+    color: var(--color-font);
+    font-family: var(--fonte-principal);
+    font-size: 1rem;
+    outline: none;
 }
 
 footer {
@@ -101,26 +224,15 @@ footer {
     left: 0;
 }
 
-.titulo-header {
-    font-family: var(--fonte-principal);
-    font-weight: 600;
-    font-size: 3.5rem;
-    color: var(--color-font);
-}
-
-.subtitulo-header {
-    font-family: var(--fonte-principal);
-    color: var(--color-font);
-}
-
 #background-video {
     opacity: 20%;
-    width: auto;
-    position: absolute;
+    width: 100%;
+    height: 100%;
+    position: fixed;
     right: 0;
     bottom: 0;
-    min-width: 100%;
-    min-height: 100%;
+    object-fit: cover;
     z-index: -1;
     background-color: var(--bg-base);
 }
+
